# flowlocal

./: .gitattributes  .gitignore  CHANGELOG.md  FlowLocal.bat  LICENSE  README.en.md  README.md  README.ru.md  TREE.md  app.py  app_paths.py  audiofile.py  backup.py  bridge.py  changelog.py  cleaner.py  config.example.json  config.py  corrections.py  dml_setup.py  flowlocal.spec  i18n.py  icons.py  inbox.py  inputspec.py  inserter.py  insights.py  intonation.py  language.py  layered.py  llm_local.py  media.py  models.py  notes.py  notes_qt.py  ollama_setup.py  onboarding_qt.py  overlay.py  overlay_qt.py  picker_qt.py  (+50 more)
.github/workflows/: build.yml  tests.yml
docs/: controls-inventory.md  history-0.x.md  index.html  macos-port-audit.md  macos-run.md  research-2026-07-19.md  revision-2026-07-19.md  settings-inventory.md  texts-2026-07-19.md
licenses/: README.txt
npm/: README.md  install.mjs  package.json
qml/: Backdrop.qml  BarChart.qml  Card.qml  FlowButton.qml  FlowInput.qml  HotkeyBox.qml  HotkeyField.qml  Icons.qml  Metric.qml  NavItem.qml  Notes.qml  Onboarding.qml  Overlay.qml  PageTitle.qml  PairTable.qml  Picker.qml  PillShadow.qml  Segmented.qml  Select.qml  SettingRow.qml  Settings.qml  Slider.qml  StatRow.qml  Toggle.qml  ToggleRow.qml  TransformTable.qml  Wordmark.qml
qml/controls/: BarChart.qml  Card.qml  CardShadow.qml  EmptyState.qml  FlowButton.qml  FlowInput.qml  FocusRing.qml  HotkeyBox.qml  Icon.qml  Icons.qml  KeyCaps.qml  Metric.qml  NavItem.qml  Note.qml  PageTitle.qml  PairRow.qml  PairTable.qml  PillShadow.qml  SectionHeader.qml  SectionTitle.qml  Segmented.qml  Select.qml  SettingRow.qml  Slider.qml  SpeedBars.qml  StatRow.qml  StreakCalendar.qml  StreakRing.qml  Toggle.qml  TransformTable.qml  VersionsDialog.qml  WaveMeter.qml  Wordmark.qml
qml/windows/: Notes.qml  Onboarding.qml  Overlay.qml  Picker.qml  Settings.qml  Transcript.qml  WebShell.qml
site/: DEMO_CHECKLIST.md  next.config.ts  package-lock.json  package.json
site/.github/workflows/: deploy.yml
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/components/: blur-fade.tsx  comparison-bars.tsx  demo-video.tsx  features-bento.tsx  get-started.tsx  hero.tsx  mode-toggle.tsx  navbar.tsx  number-ticker.tsx  onboarding-screenshot.tsx  privacy.tsx  scroll-progress.tsx  settings-screenshot.tsx  silence-quote.tsx
site/src/components/ui/: badge.tsx  button.tsx  card.tsx
tools/: BUILD.md  bench_asr.py  bench_clean.json  bench_clean.py  bench_quant.py  build.py  build_mac.py  check_all.py  check_i18n.py  check_icons.py  check_web_i18n.py  controls_inventory.py  convert_punct.py  demo_gif.py  demo_scene.qml  gen_bridge.py  gen_i18n.py  gen_theme.py  installer.iss  preview_onboarding.py  preview_overlay.py  preview_overlay_qt.py  preview_settings.py  preview_settings_qt.py  probe_capture_rebind.py  probe_keyboard_rebind.py  probe_mac.py  probe_mac_import.py  probe_mouse_bind.py  probe_mouse_suppress.py  probe_qt_overlay.py  probe_wakeup.py  probe_webshell.py  probe_webview.py  release.py  repro_double_insert.py  settings_inventory.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: i18n.en.json
web/src/: app.tsx  i18n.ts  index.css  main.tsx  test-setup.ts  theme.css
web/src/bridge/: api.ts  client.ts
web/src/onboarding/: mic-wave.tsx  steps.tsx  wizard.tsx
web/src/pages/: about.tsx  advanced.tsx  dictation.tsx  history.tsx  home.tsx  notes.tsx  registry.tsx  stats.tsx  words.tsx
web/src/ui/: button.tsx  card.tsx  cn.ts  icons.showcase.tsx  icons.tsx  layout-mode.tsx  setting-row.tsx  showcase.test.tsx  showcase.tsx  text.tsx
web/src/ui/chart/: bar-chart.tsx  key-caps.tsx  metric.tsx  showcase.tsx  speed-bars.tsx  streak-calendar.tsx  streak-ring.tsx  wave-meter.tsx
web/src/ui/form/: input.tsx  segmented.tsx  select.tsx  showcase.tsx  slider.tsx  stat-row.tsx  toggle.tsx
web/src/ui/misc/: dialog.tsx  empty-state.tsx  hotkey-field.tsx  nav.tsx  pair-table.tsx  showcase.tsx  transform-table.tsx
web/src/windows/: picker-view.tsx  picker.test.tsx  picker.tsx  transcript-view.tsx  transcript.tsx
